force-app/main/default/objects/Carrier_Score__c/Carrier_Score__c.object-meta.xml
<CustomObject>
    <label>Carrier Score</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carrier Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>