force-app/main/default/objects/Carrier_Score__c/fields/Availability_Score_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Availability_Score_Percentage__c</fullName>
    <label>Availability Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>