force-app/main/default/objects/Carrier_Score__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carrier Scores</relationshipLabel>
    <relationshipName>Carrier_Scores</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>