force-app/main/default/objects/Carrier_Score__c/fields/Lane__c.field-meta.xml
<CustomField>
    <fullName>Lane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lane</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Carrier Scores</relationshipLabel>
    <relationshipName>Carrier_Scores</relationshipName>
    <type>Lookup</type>
</CustomField>