force-app/main/default/objects/Carrier_Score__c/fields/Price_Level_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Price_Level_Percentage__c</fullName>
    <label>Price Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>