force-app/main/default/objects/Carrier_Score__c/fields/Reliability_Score__c.field-meta.xml
<CustomField>
    <fullName>Reliability_Score__c</fullName>
    <label>Reliability Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>